add new website from server na

--- a/xem-phim-moi/than-mo/index.html
+++ b/xem-phim-moi/than-mo/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1722,18 +1722,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngay-xua-ngay-xua-phan-3" title="Ngày Xửa Ngày Xưa: Phần 3">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-me-hai-mat" title="Người Mẹ Hai Mặt">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngay-xua-ngay-xua-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-me-hai-mat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ngày Xửa Ngày Xưa: Phần 3
+             Người Mẹ Hai Mặt
             </span>
             <span class="list-top-movie-item-en">
-             Once Upon A Time (Season 3)
+             Birthmother's Betrayal
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1744,17 +1744,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhat-ky-bao-thu-cua-dai-tieu-thu" title="Nhật Ký Báo Thù Của Đại Tiểu Thư">
+          <a class="list-top-movie-link" href="/phim-moi/khu-rung-vu-tru-phan-1" title="Khu rừng vũ trụ (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhat-ky-bao-thu-cua-dai-tieu-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khu-rung-vu-tru-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhật Ký Báo Thù Của Đại Tiểu Thư
+             Khu rừng vũ trụ (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
+             Space Jungle (Season 1)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chang-vang-hung-dong-phan-2" title="Chạng vạng: Hừng đông: Phần 2">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chang-vang-hung-dong-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chạng vạng: Hừng đông: Phần 2
+            </span>
+            <span class="list-top-movie-item-en">
+             The Twilight Saga: Breaking Dawn: Part 2
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1765,18 +1788,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tap-lam-nguoi-xau-phan-2" title="Tập làm người xấu (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/rua-tien-be-boi-tai-lieu-panama" title="Rửa tiền: Bê bối tài liệu Panama">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tap-lam-nguoi-xau-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rua-tien-be-boi-tai-lieu-panama-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tập làm người xấu (Phần 2)
+             Rửa tiền: Bê bối tài liệu Panama
             </span>
             <span class="list-top-movie-item-en">
-             Breaking Bad (Season 2)
+             The Laundromat
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1787,43 +1810,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quy-quyet-2" title="Quỷ quyệt 2">
+          <a class="list-top-movie-link" href="/phim-moi/crack-cocaine-tham-nhung-am-muu" title="Crack: Cocaine, tham nhũng &amp; âm mưu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quy-quyet-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/crack-cocaine,-tham-nhung-andamp;-am-muu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quỷ quyệt 2
+             Crack: Cocaine, tham nhũng &amp; âm mưu
             </span>
             <span class="list-top-movie-item-en">
-             Insidious: Chapter 2
+             Crack: Cocaine, Corruption &amp; Conspiracy
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-nang-truot-van" title="Cô Nàng Trượt Ván">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-truot-van-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cô Nàng Trượt Ván
-            </span>
-            <span class="list-top-movie-item-en">
-             Chalet Girl
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
