--- a/xem-phim-moi/sen-boss-sum-vay/index.html
+++ b/xem-phim-moi/sen-boss-sum-vay/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1715,28 +1715,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1749,6 +1727,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1772,40 +1772,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lop-vay-toi-mang" title="Lớp vảy tôi mang">
+          <a class="list-top-movie-link" href="/phim-moi/nhat-den-nhi-do-2-thien-ha-vo-dich" title="Nhất Đen Nhì Đỏ 2 – Thiên Hạ Vô Địch">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lop-vay-toi-mang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhat-den-nhi-do-thien-ha-vo-dich-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lớp vảy tôi mang
+             Nhất Đen Nhì Đỏ 2 – Thiên Hạ Vô Địch
             </span>
             <span class="list-top-movie-item-en">
-             The Skin We Wear
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/resident-evil-afterlife" title="Resident Evil: Afterlife">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/resident-evil-afterlife-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Resident Evil: Afterlife
-            </span>
-            <span class="list-top-movie-item-en">
-             Resident Evil: Afterlife
+             Who's The Winner 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1816,18 +1794,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bao-chua-phan-3" title="Bạo Chúa (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/love-syndrome-iii" title="Love Syndrome III">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-chua-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/love-syndrome-iii-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bạo Chúa (Phần 3)
+             Love Syndrome III
             </span>
             <span class="list-top-movie-item-en">
-             Tyrant (Season 3)
+             Love Syndrome III : The Series
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1838,21 +1816,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bac-si-vo-danh-phan-8" title="Bác Sĩ Vô Danh Phần 8">
+          <a class="list-top-movie-link" href="/phim-moi/elevator" title="Elevator">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-si-vo-danh-phan-8-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/elevator-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bác Sĩ Vô Danh Phần 8
+             Elevator
             </span>
             <span class="list-top-movie-item-en">
-             Doctor Who (Season 8)
+             Elevator
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             7 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1860,21 +1838,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/david-letterman-nhung-vi-khach-khong-can-gioi-thieu-phan-2" title="David Letterman: Những vị khách không cần giới thiệu (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/mat-troi-con-o-dau" title="Mặt trời, con ở đâu?">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/david-letterman-nhung-vi-khach-khong-can-gioi-thieu-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-troi-con-o-dau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             David Letterman: Những vị khách không cần giới thiệu (Phần 2)
+             Mặt trời, con ở đâu?
             </span>
             <span class="list-top-movie-item-en">
-             My Next Guest Needs No Introduction With David Letterman (Season 2)
+             My Son, Where Are You?
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nha-tam-than-hoc-phan-2" title="Nhà tâm thần học (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-tam-than-hoc-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nhà tâm thần học (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             The Alienist (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
