add new website from server na

--- a/xem-phim-moi/sen-boss-sum-vay/index.html
+++ b/xem-phim-moi/sen-boss-sum-vay/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1715,28 +1715,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
            <span class="status">
             FHD Vietsub
@@ -1749,6 +1727,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1772,40 +1772,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhat-den-nhi-do-2-thien-ha-vo-dich" title="Nhất Đen Nhì Đỏ 2 – Thiên Hạ Vô Địch">
+          <a class="list-top-movie-link" href="/phim-moi/hiep-si-sidonia" title="Hiệp Sĩ Sidonia">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhat-den-nhi-do-thien-ha-vo-dich-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hiep-si-sidonia-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhất Đen Nhì Đỏ 2 – Thiên Hạ Vô Địch
+             Hiệp Sĩ Sidonia
             </span>
             <span class="list-top-movie-item-en">
-             Who's The Winner 2
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/love-syndrome-iii" title="Love Syndrome III">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/love-syndrome-iii-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Love Syndrome III
-            </span>
-            <span class="list-top-movie-item-en">
-             Love Syndrome III : The Series
+             Knights Of Sidonia: Love Woven In The Stars
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1816,21 +1794,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/elevator" title="Elevator">
+          <a class="list-top-movie-link" href="/phim-moi/my-nhan-tam-co" title="Mỹ Nhân Tâm Cổ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/elevator-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-nhan-tam-co-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Elevator
+             Mỹ Nhân Tâm Cổ
             </span>
             <span class="list-top-movie-item-en">
-             Elevator
+             The Poison Beauty
             </span>
             <span class="list-top-movie-item-view">
-             7 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1838,18 +1816,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-troi-con-o-dau" title="Mặt trời, con ở đâu?">
+          <a class="list-top-movie-link" href="/phim-moi/tam-thap-luc-ky" title="Tam Thập Lục Kỵ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-troi-con-o-dau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tam-thap-luc-ky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mặt trời, con ở đâu?
+             Tam Thập Lục Kỵ
             </span>
             <span class="list-top-movie-item-en">
-             My Son, Where Are You?
+             Thirty Six Cavalry
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1860,21 +1838,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-tam-than-hoc-phan-2" title="Nhà tâm thần học (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/cao-tinh-ranh" title="Cáo Tinh Ranh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-tam-than-hoc-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-artful-dodger-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhà tâm thần học (Phần 2)
+             Cáo Tinh Ranh
             </span>
             <span class="list-top-movie-item-en">
-             The Alienist (Season 2)
+             The Artful Dodger
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             9 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/detective-conan-love-story-at-police-headquarters-wedding-eve" title="Detective Conan Love Story at Police Headquarters, Wedding Eve">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/detective-conan-love-story-at-police-headquarters-wedding-eve-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Detective Conan Love Story at Police Headquarters, Wedding Eve
+            </span>
+            <span class="list-top-movie-item-en">
+             名探偵コナン 本庁の刑事恋物語～結婚前夜～
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
